<resources>
    <string name="app_name">KhabeerTask</string>
    <string name="field_login_message">Field To login</string>
    <string name="welcome_message">Welcome to our hospital</string>
    <string name="employee_salary_title">Employee Salary</string>
    <string name="total_salary_title">Total Salary :</string>
    <string name="allowances_title">Allowances</string>
    <string name="deductions_title">Deductions</string>
    <string name="value_title">Value</string>
    <string name="clause_title">Clause</string>
    <string name="quantity_title">Q</string>
</resources>