<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="0dp"
    app:strokeWidth="1dp"
    app:strokeColor="@color/teal_200">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/salary_item_quantity_tv"
            android:padding="16dp"
            android:text="@string/quantity_title"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:id="@+id/salary_item_clause_tv"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/clause_title"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/salary_item_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/value_title"/>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>