<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/employee_salary_title"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/employee_pic_iv"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/employee_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/employee_pic_iv"
                    app:layout_constraintTop_toTopOf="@+id/employee_pic_iv" />

                <TextView
                    android:id="@+id/employee_job_title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="@+id/employee_name_tv"
                    app:layout_constraintStart_toStartOf="@+id/employee_name_tv"
                    app:layout_constraintTop_toBottomOf="@+id/employee_name_tv" />


                <TextView
                    android:id="@+id/total_salary_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/total_salary_title"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/teal_700"
                    app:layout_constraintBottom_toBottomOf="@+id/employee_joined_date_tv"
                    app:layout_constraintStart_toEndOf="@+id/employee_joined_date_tv"
                    app:layout_constraintTop_toTopOf="@+id/employee_joined_date_tv" />

                <TextView
                    android:id="@+id/total_salary_value_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="viewStart"
                    android:textColor="?attr/colorError"
                    app:layout_constraintBottom_toBottomOf="@+id/total_salary_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/total_salary_title"
                    app:layout_constraintTop_toTopOf="@+id/total_salary_title" />

                <TextView
                    android:id="@+id/employee_joined_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/employee_pic_iv"
                    app:layout_constraintTop_toBottomOf="@+id/employee_pic_iv"
                    app:layout_constraintVertical_bias="0"
                    tools:text="October/2019" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <org.eazegraph.lib.charts.PieChart
                    android:id="@+id/salary_pie_chart"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:padding="6dp"
                    android:layout_margin="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/allowance_label"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@color/allowance_color"
                    app:layout_constraintStart_toEndOf="@+id/salary_pie_chart"
                    app:layout_constraintTop_toTopOf="@+id/salary_pie_chart" />

                <TextView
                    android:id="@+id/allowance_label_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/allowances_title"
                    app:layout_constraintBottom_toBottomOf="@+id/allowance_label"
                    app:layout_constraintStart_toEndOf="@+id/allowance_label"
                    app:layout_constraintTop_toTopOf="@+id/allowance_label" />

                <TextView
                    android:id="@+id/allowances_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="?attr/colorError"
                    app:layout_constraintBottom_toBottomOf="@+id/allowance_label_title"
                    app:layout_constraintStart_toEndOf="@+id/allowance_label_title"
                    app:layout_constraintTop_toTopOf="@+id/allowance_label_title" />

                <ImageView
                    android:id="@+id/deduction_label"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@color/deduct_color"
                    app:layout_constraintStart_toStartOf="@+id/allowance_label"
                    app:layout_constraintTop_toBottomOf="@+id/allowance_label" />

                <TextView
                    android:id="@+id/deduction_label_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deductions_title"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/deduction_label"
                    app:layout_constraintStart_toEndOf="@+id/deduction_label"
                    app:layout_constraintTop_toTopOf="@+id/deduction_label" />

                <TextView
                    android:id="@+id/deduction_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="?attr/colorError"
                    app:layout_constraintBottom_toBottomOf="@+id/deduction_label_title"
                    app:layout_constraintStart_toEndOf="@+id/deduction_label_title"
                    app:layout_constraintTop_toTopOf="@+id/deduction_label_title" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/material_divider_total"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/salary_pie_chart"
                    app:layout_constraintTop_toBottomOf="@+id/deduction_label_title" />

                <ImageView
                    android:id="@+id/total_salary_label"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@color/teal_200"
                    app:layout_constraintStart_toStartOf="@+id/deduction_label"
                    app:layout_constraintTop_toBottomOf="@+id/material_divider_total" />

                <TextView
                    android:id="@+id/chart_total_salary_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/total_salary_title"
                    app:layout_constraintBottom_toBottomOf="@+id/total_salary_label"
                    app:layout_constraintStart_toEndOf="@+id/total_salary_label"
                    app:layout_constraintTop_toTopOf="@+id/total_salary_label" />

                <TextView
                    android:id="@+id/chart_totla_salary_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorError"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="@+id/chart_total_salary_title"
                    app:layout_constraintStart_toEndOf="@+id/chart_total_salary_title"
                    app:layout_constraintTop_toTopOf="@+id/chart_total_salary_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>